made compatible with snap 9 and java 8